
- Issue #1722344: threading._shutdown() is now called in Py_Finalize(), which
  fixes the problem of some exceptions being thrown at shutdown when the
  interpreter is killed. Patch by Adam Olsen.

- Issue #7084: Fix a (very unlikely) crash when printing a list from one
  thread, and mutating it from another one.  Patch by Scott Dial.

Library
-------

- Issue #7231: urllib2 cannot handle https with proxy requiring auth. Patch by
  Tatsuhiro Tsujikawa.

- Issue #7348: StringIO.StringIO.readline(-1) now acts as if it got no argument
  like other file objects.

- Issue #5949: fixed IMAP4_SSL hang when the IMAP server response is
  missing proper end-of-line termination.

- Fix variations of extending deques:  d.extend(d)  d.extendleft(d)  d+=d

- Issue #1923: Fixed the removal of meaningful spaces when PKG-INFO is 
  generated in Distutils. Patch by Stephen Emslie.

- Issue #4120: Drop reference to CRT from manifest when building extensions with
  msvc9compiler.

- Issue #7410: deepcopy of itertools.count() erroneously reset the count.

- Issue #7403: logging: Fixed possible race condition in lock creation.

- Issue #7341: Close the internal file object in the TarFile constructor in
  case of an error.

- Issue #7328: pydoc no longer corrupts sys.path when run with the '-m' switch

- Issue #7318: multiprocessing now uses a timeout when it fails to establish
  a connection with another process, rather than looping endlessly. The
  default timeout is 20 seconds, which should be amply sufficient for
  local connections.

- Issue #7282: Fix a memory leak when an RLock was used in a thread other
  than those started through `threading.Thread` (for example, using
  `thread.start_new_thread()`.

- Issue #7264: Fix a possible deadlock when deallocating thread-local objects
  which are part of a reference cycle.

- Issue #7249: Methods of io.BytesIO now allow `long` as well as `int`
  arguments.

- Issue #6665: Fix fnmatch to properly match filenames with newlines in them.
